@@ -43,9 +43,9 @@ public:
     // ----------------------------------
 
     virtual wxString GetValue() const;
+    virtual bool IsEmpty() const;
     virtual void SetValue(const wxString& value) { DoSetValue(value, SetValue_SendEvent); }
-
-    virtual void ChangeValue(const wxString &value) { DoSetValue(value); }
+    virtual void ChangeValue(const wxString& value) { DoSetValue(value); }
 
     virtual int GetLineLength(long lineNo) const;
     virtual wxString GetLineText(long lineNo) const;
